--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     ".": {
       "import": "./dist/index.js",
       "require": "./dist/index.umd.cjs"
+    },
+    "./tailwind": {
+      "import": "./dist/tailwind.config.js",
+      "require": "./dist/tailwind.config.js"
     }
   },
   "main": "./dist/index.umd.cjs",
